@@ -30,6 +30,8 @@
  - (dtucker) [openbsd-compat/glob.c] Update from OpenBSD 1.22 -> 1.25.
  - (dtucker) [openbsd-compat/glob.h] Update from OpenBSD 1.8 -> 1.9.
  - (dtucker) [openbsd-compat/getcwd.c] Update from OpenBSD 1.9 -> 1.14.
+ - (dtucker) [openbsd-compat/getcwd.c] Replace lstat with fstat to match up
+   with OpenBSD code since we don't support platforms without fstat any more.
 
 20051105
  - (djm) OpenBSD CVS Sync
